--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
-/services/.terraform/
-/services/.terraform.lock.hcl
-/services/terraform.tfstate
+/terraform/.terraform/
+/terraform/.terraform.lock.hcl
+/terraform/terraform.tfstate
+/terraform/terraform.tfstate.backup
